--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@
             <div class="row">
                 <div class="col-7">
                     <h1>JENNIFER SUMMERS</h1>
-                    <h2>PhD Candidate in Ecology and Evolutionary Biology</h2>
-                    <h2>University of Tennessee - Knoxville</h2>
+                    <div class="positionGroup">
+                        <h2>PhD Candidate in Ecology and Evolutionary Biology</h2>
+                        <h2>University of Tennessee - Knoxville</h2>
+                    </div>
+                    <div class="positionGroup">
+                        <h2>National Academy of Sciences Gulf Research Program Policy Fellow</h2>
+                    </div>
                 </div>
                 <div class="col-5">
                     <img class="img-fluid" src="./assets/marsh_grass.png" alt="marsh grass illustration">
@@ -26,11 +31,31 @@
             </div>
         </div>
     </header>
-    <main>
+    <section class="" id="navbar">
         <div class="container">
             <div class="row">
+                <ul class="nav nav-tabs">
+                    <li class="nav-item">
+                      <a id="home" class="nav-link active" href="./index.html"><span class="px-5">Home</span></a>
+                    </li>
+                    <li id="cv" class="nav-item">
+                      <a class="nav-link" href="./cv.html"><span class="px-5">CV</span></a>
+                    </li>
+                    <li id="gallery" class="nav-item">
+                      <a class="nav-link" href="./gallery.html"><span class="px-4">Gallery</span></a>
+                    </li>
+                  </ul>
+            </div>
+        </div>
+    </section>
+    <main class="content">
+        <section class="container">
+            <div id="homeContent" class="row">
                 <div class="col-4 p-2">
                     <aside>
+                        <div class="">
+                            <img id="headshot" class="img-fluid" src="./assets/IMG-4141.jpg" alt="">
+                        </div>
                         <h3>CONTACT</h3>
                         <p><i class="far fa-paper-plane"></i> <a href="mailto: jsumme24@vols.utk.edu">jsumme24@vols.utk.edu</a></p>
                         <p><i class="far fa-paper-plane"></i> <a href="mailto: jennsummers19@gmail.com">jennsummers19@gmail.com</a></p>
@@ -58,29 +83,15 @@
                     <p>Mike Blum and his wife, Liz Derryberry, took positions at the University of Tennessee - Knoxville and I joined my lab in moving to Knoxville in August 2017.</p>
                     <p>Thanks for reading!</p>
                 </div>
-            </div>
+            </section>
             <hr>
-            <div class="row">
-                <div id="cv" class="col-12">
-                    <h3>Curriculum Vitae</h3>
-                    <div id="adobe-dc-view"></div>
-                </div>
-            </div>
         </div>
     </main>
+    <footer class="d-flex justify-content-center">
+        <p>Made with love by Michael Summers</p>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-    <script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
-    <script type="text/javascript">
-        document.addEventListener("adobe_dc_view_sdk.ready", function()
-        {
-            var adobeDCView = new AdobeDC.View({clientId: "<YOUR_CLIENT_ID>", divId: "adobe-dc-view"});
-            adobeDCView.previewFile(
-        {
-            content:   {location: {url: "./assets/summers_cv.pdf"}},
-            metaData: {fileName: "Jenn Summers CV"}
-        });
-        });
-    </script>
+    <script src="./script.js"></script>
 </body>
 </html>
