Correct university typo

--- a/cv.html
+++ b/cv.html
@@ -62,7 +62,7 @@
                               <td>2013</td>
                             </tr>
                             <tr>
-                              <td>Tulan University, LA</td>
+                              <td>Tulane University, LA</td>
                               <td>Ecology and Evolutionary Biology</td>
                               <td>Ph.D.</td>
                               <td>2015-2017</td>
