Increase gallery size and make page reactive to window size

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="container">
             <div class="row">
-                <div class="col-7">
+                <div class="col-11">
                     <h1>JENNIFER SUMMERS</h1>
                     <div class="positionGroup">
                         <h2>PhD Candidate in Ecology and Evolutionary Biology</h2>
@@ -24,9 +24,10 @@
                         <h2>National Academy of Sciences Gulf Research Program Policy Fellow</h2>
                     </div>
                 </div>
-                <div class="col-5">
-                    <img class="img-fluid" src="./assets/marsh_grass.png" alt="marsh grass illustration">
-                    <p class="float-right">Schoenoplectus americanus</p>
+                <div class="">
+                    <div id="img-wrapper">
+                        <img id="header-img" class="img-fluid" src="./assets/marsh_grass.png" alt="marsh grass illustration" hidden="true">
+                    </div>
                 </div>
             </div>
         </div>
@@ -51,7 +52,7 @@
     <main class="content">
         <section class="container">
             <div id="homeContent" class="row">
-                <div class="col-4 p-2">
+                <div class="col-xs-12 col-md-4 p-2">
                     <aside>
                         <div class="">
                             <img id="headshot" class="img-fluid" src="./assets/IMG-4141.jpg" alt="">
@@ -73,22 +74,20 @@
                         </ul>
                     </aside>
                 </div>
-                <div class="col-8 p-2">
-                    <h3>BIO</h3>
-                    <p>Hello!</p>
-                    <p>I started my PhD in New Orleans at Tulane University and now I'm finishing up my PhD in Ecology and Evolutionary Biology at the University of Tennessee Knoxville.</p>
-                    <p>My academic interests began in sustainable agriculture and land use change's impacts on conservation. While working abroad in Canada after graduation from Furman University in 2013, I decided to pursue experiences in community engagement. Thus, I chose to work in Corporant, Haiti for a year at Partners in Agriculture sustainable agriculture school. Afterwards, I worked with sustainable gardeners in South Carolina, partnering with SC Parks and Recreation to carry out historical landscape research on Redcliffe Plantation State Historic Site.</p>
-                    <p>After all this I decided to engage in academia - I found I loved teaching in Haiti and wanted to pursue community engaged research as a university professor. I joined the Blum lab at Tulane University in 2015 working on aquatic invasive species impact on native fauna. After a year I developed a fascination with eco- and rapid evolution and have since begun a project pursuing these interests.</p>
-                    <p>My current work examines ecological resilience in the face of climate change using a soil-stored seed bank of Olney's bulrush, a brackish marsh sedge, and its capacity to adapt rapidly to salinity stress resulting from sea level rise. I work in Kirkpatrick Marsh at the Smithsonian Environmental Research Center in Edgewater, Maryland. This work is vitally important: understanding the rate of adaptation of this foundational sedge can help us project the futures of coastlines as climate change worsens. By resurrecting seeds through what has become known as 'resurrection ecology', I am able to compare young and old populations of S. americanus in common conditions.  I use experiments combined with  whole genome sequencing, RADSeq, and RNASeq to dissect the genetic underpinnings of adaptation.</p>
-                    <p>Mike Blum and his wife, Liz Derryberry, took positions at the University of Tennessee - Knoxville and I joined my lab in moving to Knoxville in August 2017.</p>
-                    <p>Thanks for reading!</p>
+                <div class="col-xs-12 col-md-8 p-2">
+                    <h3 class="mt-0">BIO</h3>
+                    <p>Jennifer (Jenn) Summers worked on her PhD in Ecology and Evolutionary Biology at Tulane University in New Orleans and then at the University of Tennessee in Knoxville. Summers holds degrees in French and Biology from Furman University in Greenville, SC and is scheduled to complete her PhD in Ecology and Evolutionary Biology from the University of Tennessee Knoxville in December 2020.</p>
+                    <p>Summers' research focuses on the evolutionary responses of coastal marsh plants to sea level rise. She ‘resurrects’ a naturally formed seed bank to compare old and young age cohorts of a foundational sedge and how it may have responded to historical climate change. Doing so can enable better predictions of how the sedge will respond to future change. This work also informs understanding of how coastal marsh plants interact with cooccurring species. Summers uses population genetics (microsatellites), population genomics (ddRADseq) and gene expression analysis (RNAseq) to answer questions about change through time and response to stress.</p>
+                    <p>Summers also invests her time in writing "pop sci" articles for the general public, including, but not limited to, Nature Jobs and Scientific American. Inclusive pedagogical techniques and outreach are an additional passion: she promotes inclusion underrepresented groups in the sciences via evidence-based teaching methods, science outreach, and participating in organizations like the Pride Center at UTK. Prior to beginning work on her PhD,  Summers worked as a summer assistant at the non-profit Desarollo Sostenible para Guatemala (DESGUA) in Guatemala; taught biology and English at the Centre de Formation Fritz Lafontant in Corporant, Haiti; worked as an intern at Jenks Farmer, Plantsman sustainable lily farm in Beech Island, SC; and worked as staff at the John C. Campbell folk school in western North Carolina.</p>
+                    <p>Summers is currently a National Academy of Sciences Gulf Coast Research Policy fellow for 2020-2021 and is hosted by the Gulf Coast Ecosystem Restoration Council (RESTORE Council). The RESTORE Council is responsible for restoring and protecting the natural resources, ecosystems, fisheries, marine and wildlife habitats, beaches, coastal wetlands, and economy of the Gulf Coast.</p>
+                    </p>
                 </div>
             </section>
             <hr>
         </div>
     </main>
-    <footer class="d-flex justify-content-center">
-        <p>Made with love by Michael Summers</p>
+    <footer class="d-flex justify-content-center align-items-center py-2">
+        © 2020 Jennifer L Summers  |  A Scientist is Always Fine 🔬
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
