--- a/gallery.html
+++ b/gallery.html
@@ -14,7 +14,7 @@
     <header>
         <div class="container">
             <div class="row">
-                <div class="col-7">
+                <div class="col-11">
                     <h1>JENNIFER SUMMERS</h1>
                     <div class="positionGroup">
                         <h2>PhD Candidate in Ecology and Evolutionary Biology</h2>
@@ -24,9 +24,10 @@
                         <h2>National Academy of Sciences Gulf Research Program Policy Fellow</h2>
                     </div>
                 </div>
-                <div class="col-5">
-                    <img class="img-fluid" src="./assets/marsh_grass.png" alt="marsh grass illustration">
-                    <p class="float-right">Schoenoplectus americanus</p>
+                <div class="">
+                    <div id="img-wrapper">
+                        <img id="header-img" class="img-fluid" src="./assets/marsh_grass.png" alt="marsh grass illustration" hidden>
+                    </div>
                 </div>
             </div>
         </div>
@@ -51,21 +52,63 @@
     <main class="content">
         <section class="container">
             <div id="homeContent" class="row">
-                <div class="col-4">
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3">
                     <img class="img-fluid" src="./assets/IMG_4717.JPG" alt="">
                 </div>
-                <div class="col-4">
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3">
                     <img class="img-fluid" src="./assets/IMG_4754.JPG" alt="">
                 </div>
-                <div class="col-4">
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3">
                     <img class="img-fluid" src="./assets/IMG_4759.JPG" alt="">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3">
+                    <img class="img-fluid" src="./assets/canadatigerlily.jpg" alt="">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3">
+                    <img class="img-fluid" src="./assets/DSC00160.JPG" alt="">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3">
+                    <img class="img-fluid" src="./assets/DSC00193.JPG" alt="">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3">
+                    <img class="img-fluid" src="./assets/DSC00203.JPG" alt="">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3">
+                    <img class="img-fluid" src="./assets/DSC00276.JPG" alt="">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3">
+                    <img class="img-fluid" src="./assets/DSC00310.JPG" alt="">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3">
+                    <img class="img-fluid" src="./assets/DSC00412.JPG" alt="">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3">
+                    <img class="img-fluid" src="./assets/DSC00431.JPG" alt="">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3">
+                    <img class="img-fluid" src="./assets/DSC00436.JPG" alt="">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3">
+                    <img class="img-fluid" src="./assets/DSC00443.JPG" alt="">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3">
+                    <img class="img-fluid" src="./assets/friendswiththeun.jpg" alt="">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3">
+                    <img class="img-fluid" src="./assets/haitianmangos.JPG" alt="">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3">
+                    <img class="img-fluid" src="./assets/haitianmtns.jpg" alt="">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3">
+                    <img class="img-fluid" src="./assets/historicgardens.jpg" alt="">
                 </div>
                 <hr>
             </div>
         </section>
     </main>
-    <footer class="d-flex justify-content-center">
-        <p>Made with love by Michael Summers</p>
+    <footer class="d-flex justify-content-center align-items-center py-2">
+        © 2020 Jennifer L Summers  |  A Scientist is Always Fine 🔬
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
