Add more gallery photos and reformat images for size

--- a/gallery.html
+++ b/gallery.html
@@ -51,57 +51,123 @@
     </section>
     <main class="content">
         <section class="container">
-            <div id="homeContent" class="row">
-                <div class="col-sm-12 col-md-6 col-lg-4 my-3">
+            <div id="galleryContent" class="row">
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3 d-flex align-items-center">
                     <img class="img-fluid" src="./assets/IMG_4717.JPG" alt="">
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-4 my-3">
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3 d-flex align-items-center">
                     <img class="img-fluid" src="./assets/IMG_4754.JPG" alt="">
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-4 my-3">
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3 d-flex align-items-center">
                     <img class="img-fluid" src="./assets/IMG_4759.JPG" alt="">
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-4 my-3">
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3 d-flex align-items-center">
                     <img class="img-fluid" src="./assets/canadatigerlily.jpg" alt="">
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-4 my-3">
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3 d-flex align-items-center">
                     <img class="img-fluid" src="./assets/DSC00160.JPG" alt="">
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-4 my-3">
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3 d-flex align-items-center">
                     <img class="img-fluid" src="./assets/DSC00193.JPG" alt="">
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-4 my-3">
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3 d-flex align-items-center">
                     <img class="img-fluid" src="./assets/DSC00203.JPG" alt="">
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-4 my-3">
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3 d-flex align-items-center">
                     <img class="img-fluid" src="./assets/DSC00276.JPG" alt="">
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-4 my-3">
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3 d-flex align-items-center">
                     <img class="img-fluid" src="./assets/DSC00310.JPG" alt="">
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-4 my-3">
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3 d-flex align-items-center">
                     <img class="img-fluid" src="./assets/DSC00412.JPG" alt="">
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-4 my-3">
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3 d-flex align-items-center">
                     <img class="img-fluid" src="./assets/DSC00431.JPG" alt="">
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-4 my-3">
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3 d-flex align-items-center">
                     <img class="img-fluid" src="./assets/DSC00436.JPG" alt="">
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-4 my-3">
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3 d-flex align-items-center">
                     <img class="img-fluid" src="./assets/DSC00443.JPG" alt="">
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-4 my-3">
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3 d-flex align-items-center">
                     <img class="img-fluid" src="./assets/friendswiththeun.jpg" alt="">
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-4 my-3">
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3 d-flex align-items-center">
                     <img class="img-fluid" src="./assets/haitianmangos.JPG" alt="">
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-4 my-3">
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3 d-flex align-items-center">
                     <img class="img-fluid" src="./assets/haitianmtns.jpg" alt="">
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-4 my-3">
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3 d-flex align-items-center">
                     <img class="img-fluid" src="./assets/historicgardens.jpg" alt="">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3 d-flex align-items-center">
+                    <img class="img-fluid" src="./assets/IMG_4089.JPG" alt="">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3 d-flex align-items-center">
+                    <img class="img-fluid" src="./assets/IMG_4091.JPG " alt="">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3 d-flex align-items-center">
+                    <img class="img-fluid" src="./assets/IMG_4092.JPG" alt="">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3 d-flex align-items-center">
+                    <img class="img-fluid" src="./assets/IMG_4094.JPG" alt="">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3 d-flex align-items-center">
+                    <img class="img-fluid" src="./assets/IMG_4095.JPG" alt="">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3 d-flex align-items-center">
+                    <img class="img-fluid" src="./assets/IMG_4096.JPG" alt="">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3 d-flex align-items-center">
+                    <img class="img-fluid" src="./assets/IMG_4097.JPG" alt="">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3 d-flex align-items-center">
+                    <img class="img-fluid" src="./assets/IMG_4500.JPG" alt="">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3 d-flex align-items-center">
+                    <img class="img-fluid" src="./assets/IMG_4515.JPG " alt="">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3 d-flex align-items-center">
+                    <img class="img-fluid" src="./assets/IMG_4835.JPG" alt="">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3 d-flex align-items-center">
+                    <img class="img-fluid" src="./assets/IMG_4845.JPG" alt="">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3 d-flex align-items-center">
+                    <img class="img-fluid" src="./assets/IMG_4996.JPG" alt="">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3 d-flex align-items-center">
+                    <img class="img-fluid" src="./assets/IMG_4997.JPG" alt="">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3 d-flex align-items-center">
+                    <img class="img-fluid" src="./assets/lakesuperior.JPG" alt="">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3 d-flex align-items-center">
+                    <img class="img-fluid" src="./assets/portrait.jpg" alt="">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3 d-flex align-items-center">
+                    <img class="img-fluid" src="./assets/raingarden.jpg" alt="">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3 d-flex align-items-center">
+                    <img class="img-fluid" src="./assets/redcliffe_prezy.JPG" alt="">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3 d-flex align-items-center">
+                    <img class="img-fluid" src="./assets/saltmarshskull.JPG" alt="">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3 d-flex align-items-center">
+                    <img class="img-fluid" src="./assets/saltmarshsnake.JPG" alt="">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3 d-flex align-items-center">
+                    <img class="img-fluid" src="./assets/samerflower.JPG" alt="">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3 d-flex align-items-center">
+                    <img class="img-fluid" src="./assets/sercmarsh.JPG" alt="">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 my-3 d-flex align-items-center">
+                    <img class="img-fluid" src="./assets/sercwalkway.JPG" alt="">
                 </div>
                 <hr>
             </div>
