Attempt to prevent viewable x overflow on mobile

--- a/index.html
+++ b/index.html
@@ -11,84 +11,86 @@
     <title>Jennifer Summers</title>
 </head>
 <body>
-    <header>
-        <div class="container">
-            <div class="row">
-                <div class="col-11">
-                    <h1>JENNIFER SUMMERS</h1>
-                    <div class="positionGroup">
-                        <h2>PhD Candidate in Ecology and Evolutionary Biology</h2>
-                        <h2>University of Tennessee - Knoxville</h2>
-                    </div>
-                    <div class="positionGroup">
-                        <h2>National Academy of Sciences Gulf Research Program Policy Fellow</h2>
-                    </div>
-                </div>
-                <div class="">
-                    <div id="img-wrapper">
-                        <img id="header-img" class="img-fluid" src="./assets/marsh_grass.png" alt="marsh grass illustration" hidden="true">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
-    <section class="" id="navbar">
-        <div class="container">
-            <div class="row">
-                <ul class="nav nav-tabs">
-                    <li class="nav-item">
-                      <a id="home" class="nav-link active" href="./index.html"><span class="px-4">Home</span></a>
-                    </li>
-                    <li id="cv" class="nav-item">
-                      <a class="nav-link" href="./cv.html"><span class="px-4">CV</span></a>
-                    </li>
-                    <li id="gallery" class="nav-item">
-                      <a class="nav-link" href="./gallery.html"><span class="px-4">Gallery</span></a>
-                    </li>
-                  </ul>
-            </div>
-        </div>
-    </section>
-    <main class="content">
-        <section class="container">
-            <div id="homeContent" class="row">
-                <div class="col-xs-12 col-md-4 p-2">
-                    <aside>
-                        <div class="">
-                            <img id="headshot" class="img-fluid" src="./assets/IMG-4141.jpg" alt="">
+    <div class="overflow-wrapper">
+        <header>
+            <div class="container">
+                <div class="row">
+                    <div class="col-11">
+                        <h1>JENNIFER SUMMERS</h1>
+                        <div class="positionGroup">
+                            <h2>PhD Candidate in Ecology and Evolutionary Biology</h2>
+                            <h2>University of Tennessee - Knoxville</h2>
                         </div>
-                        <h3>CONTACT</h3>
-                        <p><i class="far fa-paper-plane"></i> <a href="mailto: jsumme24@vols.utk.edu">jsumme24@vols.utk.edu</a></p>
-                        <p><i class="far fa-paper-plane"></i> <a href="mailto: jennsummers19@gmail.com">jennsummers19@gmail.com</a></p>
-                        <p><i class="fab fa-twitter"></i> <a href="https://twitter.com/summers_allyear">@summers_allyear</a></p>
-                        <h3>INTERESTS</h3>
-                        <ul>
-                            <li>Conservation Genetics</li>
-                            <li>Structured Decision Making</li>
-                            <li>Climate Change</li>
-                            <li>SciComm</li>
-                            <li>Phylogenomics</li>
-                            <li>Resurrection Ecology</li>
-                            <li>Dormancy, Senescence, and Longevity</li>
-                            <li>Policy</li>
-                        </ul>
-                    </aside>
+                        <div class="positionGroup">
+                            <h2>National Academy of Sciences Gulf Research Program Policy Fellow</h2>
+                        </div>
+                    </div>
+                    <div class="">
+                        <div id="img-wrapper">
+                            <img id="header-img" class="img-fluid" src="./assets/marsh_grass.png" alt="marsh grass illustration" hidden="true">
+                        </div>
+                    </div>
                 </div>
-                <div class="col-xs-12 col-md-8 p-2">
-                    <h3 class="mt-0">BIO</h3>
-                    <p>Jennifer (Jenn) Summers worked on her PhD in Ecology and Evolutionary Biology at Tulane University in New Orleans and then at the University of Tennessee in Knoxville. Summers holds degrees in French and Biology from Furman University in Greenville, SC and is scheduled to complete her PhD in Ecology and Evolutionary Biology from the University of Tennessee Knoxville in December 2020.</p>
-                    <p>Summers' research focuses on the evolutionary responses of coastal marsh plants to sea level rise. She ‘resurrects’ a naturally formed seed bank to compare old and young age cohorts of a foundational sedge and how it may have responded to historical climate change. Doing so can enable better predictions of how the sedge will respond to future change. This work also informs understanding of how coastal marsh plants interact with cooccurring species. Summers uses population genetics (microsatellites), population genomics (ddRADseq) and gene expression analysis (RNAseq) to answer questions about change through time and response to stress.</p>
-                    <p>Summers also invests her time in writing "pop sci" articles for the general public, including, but not limited to, Nature Jobs and Scientific American. Inclusive pedagogical techniques and outreach are an additional passion: she promotes inclusion underrepresented groups in the sciences via evidence-based teaching methods, science outreach, and participating in organizations like the Pride Center at UTK. Prior to beginning work on her PhD,  Summers worked as a summer assistant at the non-profit Desarollo Sostenible para Guatemala (DESGUA) in Guatemala; taught biology and English at the Centre de Formation Fritz Lafontant in Corporant, Haiti; worked as an intern at Jenks Farmer, Plantsman sustainable lily farm in Beech Island, SC; and worked as staff at the John C. Campbell folk school in western North Carolina.</p>
-                    <p>Summers is currently a National Academy of Sciences Gulf Coast Research Policy fellow for 2020-2021 and is hosted by the Gulf Coast Ecosystem Restoration Council (RESTORE Council). The RESTORE Council is responsible for restoring and protecting the natural resources, ecosystems, fisheries, marine and wildlife habitats, beaches, coastal wetlands, and economy of the Gulf Coast.</p>
-                    </p>
+            </div>
+        </header>
+        <section class="" id="navbar">
+            <div class="container">
+                <div class="row">
+                    <ul class="nav nav-tabs">
+                        <li class="nav-item">
+                          <a id="home" class="nav-link active" href="./index.html"><span class="px-4">Home</span></a>
+                        </li>
+                        <li id="cv" class="nav-item">
+                          <a class="nav-link" href="./cv.html"><span class="px-4">CV</span></a>
+                        </li>
+                        <li id="gallery" class="nav-item">
+                          <a class="nav-link" href="./gallery.html"><span class="px-4">Gallery</span></a>
+                        </li>
+                      </ul>
                 </div>
-            </section>
-            <hr>
-        </div>
-    </main>
-    <footer class="d-flex justify-content-center align-items-center py-2">
-        © 2020 Jennifer L Summers  |  A Scientist is Always Fine 🔬
-    </footer>
+            </div>
+        </section>
+        <main class="content">
+            <section class="container">
+                <div id="homeContent" class="row">
+                    <div class="col-xs-12 col-md-4 p-2">
+                        <aside>
+                            <div class="">
+                                <img id="headshot" class="img-fluid" src="./assets/IMG-4141.jpg" alt="">
+                            </div>
+                            <h3>CONTACT</h3>
+                            <p><i class="far fa-paper-plane"></i> <a href="mailto: jsumme24@vols.utk.edu">jsumme24@vols.utk.edu</a></p>
+                            <p><i class="far fa-paper-plane"></i> <a href="mailto: jennsummers19@gmail.com">jennsummers19@gmail.com</a></p>
+                            <p><i class="fab fa-twitter"></i> <a href="https://twitter.com/summers_allyear">@summers_allyear</a></p>
+                            <h3>INTERESTS</h3>
+                            <ul>
+                                <li>Conservation Genetics</li>
+                                <li>Structured Decision Making</li>
+                                <li>Climate Change</li>
+                                <li>SciComm</li>
+                                <li>Phylogenomics</li>
+                                <li>Resurrection Ecology</li>
+                                <li>Dormancy, Senescence, and Longevity</li>
+                                <li>Policy</li>
+                            </ul>
+                        </aside>
+                    </div>
+                    <div class="col-xs-12 col-md-8 p-2">
+                        <h3 class="mt-0">BIO</h3>
+                        <p>Jennifer (Jenn) Summers worked on her PhD in Ecology and Evolutionary Biology at Tulane University in New Orleans and then at the University of Tennessee in Knoxville. Summers holds degrees in French and Biology from Furman University in Greenville, SC and is scheduled to complete her PhD in Ecology and Evolutionary Biology from the University of Tennessee Knoxville in December 2020.</p>
+                        <p>Summers' research focuses on the evolutionary responses of coastal marsh plants to sea level rise. She ‘resurrects’ a naturally formed seed bank to compare old and young age cohorts of a foundational sedge and how it may have responded to historical climate change. Doing so can enable better predictions of how the sedge will respond to future change. This work also informs understanding of how coastal marsh plants interact with cooccurring species. Summers uses population genetics (microsatellites), population genomics (ddRADseq) and gene expression analysis (RNAseq) to answer questions about change through time and response to stress.</p>
+                        <p>Summers also invests her time in writing "pop sci" articles for the general public, including, but not limited to, Nature Jobs and Scientific American. Inclusive pedagogical techniques and outreach are an additional passion: she promotes inclusion underrepresented groups in the sciences via evidence-based teaching methods, science outreach, and participating in organizations like the Pride Center at UTK. Prior to beginning work on her PhD,  Summers worked as a summer assistant at the non-profit Desarollo Sostenible para Guatemala (DESGUA) in Guatemala; taught biology and English at the Centre de Formation Fritz Lafontant in Corporant, Haiti; worked as an intern at Jenks Farmer, Plantsman sustainable lily farm in Beech Island, SC; and worked as staff at the John C. Campbell folk school in western North Carolina.</p>
+                        <p>Summers is currently a National Academy of Sciences Gulf Coast Research Policy fellow for 2020-2021 and is hosted by the Gulf Coast Ecosystem Restoration Council (RESTORE Council). The RESTORE Council is responsible for restoring and protecting the natural resources, ecosystems, fisheries, marine and wildlife habitats, beaches, coastal wetlands, and economy of the Gulf Coast.</p>
+                        </p>
+                    </div>
+                </section>
+                <hr>
+            </div>
+        </main>
+        <footer class="d-flex justify-content-center align-items-center py-2">
+            © 2020 Jennifer L Summers  |  A Scientist is Always Fine 🔬
+        </footer>
+    </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     <script src="./script.js"></script>
