--- a/cv.html
+++ b/cv.html
@@ -13,6 +13,9 @@
 <body>
     <div class="overflow-wrapper">
         <header>
+            <div id="img-wrapper">
+                <img id="header-img" class="img-fluid" src="./assets/marsh_grass.png" alt="marsh grass illustration">
+            </div>
             <div class="container">
                 <div class="row">
                     <div class="col-11">
@@ -25,10 +28,7 @@
                             <h2>National Academy of Sciences Gulf Research Program Policy Fellow</h2>
                         </div>
                     </div>
-                    <div class="">
-                        <div id="img-wrapper">
-                            <img id="header-img" class="img-fluid" src="./assets/marsh_grass.png" alt="marsh grass illustration" hidden>
-                        </div>
+                    <div class="col-1">
                     </div>
                 </div>
             </div>
