--- a/gallery.html
+++ b/gallery.html
@@ -19,9 +19,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-11">
-                        <h1>JENNIFER SUMMERS</h1>
+                        <h1>JENNIFER SUMMERS, PhD</h1>
                         <div class="positionGroup">
-                            <h2>PhD Candidate in Ecology and Evolutionary Biology</h2>
                             <h2>University of Tennessee - Knoxville</h2>
                         </div>
                         <div class="positionGroup">
